# Squall-Core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  _squall.py  readme.md  setup.py
demo/: cb_echo.py  echo.py  echocb.py  echoco.py  echoraw.py  echosrv.py  echosts.py  hello.py  helloworld.py
demo/cxx/: hello.cxx
demo/py3/: echo.py  hello.py
demo/python/: echoraw.py  echosps.py  echosrv.py  hello.py  helloworld.py
demo/sagi/: gateway.py  nginx.conf  sagienv.py  sagimhw.py  sagishw.py
demo/scgi/: scgiapp.py  scgienv.py  scgishw.py
demo/wsgi/: nginx.conf  wsgimhw.py  wsgishw.py
demo/wsgi/botapp/: app.py  (+1 more)
python/: _squall.py
python/_squall/: module.cxx
python/squall/: abc.py  coroutine.py  iostream.py  network.py  utils.py
squall/: Dispatcher.hxx  Loop.hxx  Squall.hxx  StreamAutoBuffer.hxx  Watcher.hxx  _autobuff.py  _tornado.py  abc.py  backend.py  core_asyncio.py  core_cython.pyx  core_fallback.py  core_tornado.py  coroutine.py  dispatcher.py  failback.py  gateway.py  gateways.py  network.py  utility.py
squall/_squall/: dispatcher.cpp
squall/core/: __init__.py  abc.py  callback.py  iostream.py  network.py  networking.py  switching.py  utils.py
squall/core_/: __init__.py  abc.py  iostream.py  network.py  switching.py
squall/core_callback/: PyAutoBuffer.hxx  PyEventLoop.hxx  Squall.pxd  __init__.py  buffers.py  core_callback.pyx  eventbuff.py  eventloop.py
squall/core_cython/: core_cython.pyx
squall/python/: coroutine.py  network.py  stream.py
squall/scgi/: __init__.py  app.py  server.py
tests/: CMakeLists.txt  bad_network.py  test_concurrency.py  test_coroutine.py  test_coroutine_switching.py  test_dispatcher.py  test_event_dispatcher.py  test_iostream.py  test_network.py  test_switching.py
tests/python/: test_concurrency.py  test_network.py  test_switching.py
tests/test_py3/: test_concurrency.py  test_coroutine_switching.py  test_event_dispatcher.py  test_iostream.py  test_timeout_gen.py
tests/test_python/: test_coroutine.py  test_dispatcher.py
(+24 files in other folders)
