CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(Squall_CXX)

SET(BUILD_PATH, ${CMAKE_CURRENT_SOURCE_DIR}/build)
SET(EXECUTABLE_OUTPUT_PATH ${BUILD_PATH})

INCLUDE(FindPackageHandleStandardArgs)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
FIND_LIBRARY(LIBEV_LIBRARY NAMES ev)
FIND_PATH(LIBEV_INCLUDE_DIR ev++.h PATH_SUFFIXES include/ev)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(libev DEFAULT_MSG LIBEV_LIBRARY LIBEV_INCLUDE_DIR)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/squall)

ADD_EXECUTABLE(hello demo/cxx/hello.cxx)
TARGET_LINK_LIBRARIES(hello ${LIBEV_LIBRARY})
